--- a/cytoscape/trunk/application/pom.xml
+++ b/cytoscape/trunk/application/pom.xml
@@ -3,16 +3,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>cytoscape</groupId>
+    <artifactId>parent</artifactId>
+    <version>2.8.0-beta2-SNAPSHOT</version>
+  </parent>
 
   <groupId>cytoscape</groupId>
   <artifactId>application</artifactId>
-  <version>2.8.0-beta2-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Cytoscape Application</name>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
 
   <build>
 
@@ -73,59 +74,6 @@
          </executions>
         </plugin>
 		-->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
-            <source>1.5</source>
-            <target>1.5</target>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <argLine>-Xmx1G</argLine>
-            <redirectTestOutputToFile>true</redirectTestOutputToFile>
-          </configuration>
-        </plugin>
-		<!-- generates a javadoc jar suitable for use in an IDE -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <configuration>
-            <encoding>UTF-8</encoding>
-            <locale>en</locale>
-            <javadocVersion>1.5</javadocVersion>
-            <links>
-              <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
-            </links>
-            <footer>Cytoscape API</footer>
-            <header>Cytoscape API</header>
-            <bottom>Copyright 2010 Cytoscape Consortium.  All rights reserved.</bottom>
-          </configuration>
-          <executions>
-            <execution>
-              <id>attach-javadocs</id>
-              <goals>
-                <goal>jar</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-		<!-- generates a sources jar suitable for use in an IDE -->
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-source-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>attach-sources</id>
-              <goals>
-                <goal>jar</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
 		<!-- generates classes for XML handling (bookmarks and sessions) -->
         <plugin>
           <groupId>org.jvnet.jaxb2.maven2</groupId>
@@ -272,27 +220,7 @@
        </repository>
   </repositories>
 
-  <distributionManagement>
-    <repository>
-      <id>releases</id>
-      <name>Internal Releases</name>
-      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases</url>
-    </repository>
-    <snapshotRepository>
-      <id>snapshots</id>
-      <name>Internal Snapshots</name>
-      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
-
-
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>util-intr</artifactId>
