--- a/cytoscape/trunk/corelibs/pom.xml
+++ b/cytoscape/trunk/corelibs/pom.xml
@@ -1,10 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>cytoscape</groupId>
+    <artifactId>parent</artifactId>
+    <version>2.8.0-beta2-SNAPSHOT</version>
+  </parent>
 
   <groupId>cytoscape.corelibs</groupId>
   <artifactId>parent</artifactId>
   <packaging>pom</packaging>
-  <version>2.8.0-beta2-SNAPSHOT</version>
   <name>Cytoscape Core Libraries Parent POM</name>
 
   <properties>
@@ -32,105 +36,6 @@
     <module>ding</module>
     <module>docs</module>
   </modules>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <version>2.0</version>
-        <configuration>
-          <tagBase>svn+ssh://grenache.ucsd.edu/cellar/common/svn/corelibs/tags</tagBase>
-		  <autoVersionSubmodules>true</autoVersionSubmodules>
-        </configuration>
-      </plugin>
-    </plugins>
-
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
-            <source>1.5</source>
-            <target>1.5</target>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <argLine>-Xmx256m</argLine>
-            <redirectTestOutputToFile>true</redirectTestOutputToFile>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <configuration>
-            <encoding>UTF-8</encoding>
-            <locale>en</locale>
-            <javadocVersion>1.5</javadocVersion>
-            <links>
-              <link>http://download.oracle.com/docs/cd/E17476_01/javase/1.5.0/docs/api/</link>
-            </links>
-            <footer>Cytoscape ${version} Core Libraries API</footer>
-            <header>Cytoscape ${version} Core Libraries API</header>
-            <bottom>Copyright 2010 Cytoscape Consortium.  All rights reserved.</bottom>
-          </configuration>
-          <executions>
-            <execution>
-              <id>attach-javadocs</id>
-              <goals>
-                <goal>jar</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-source-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>attach-sources</id>
-              <goals>
-                <goal>jar</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-   </pluginManagement> 
-  </build>
-
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-
-  <distributionManagement>
-    <repository>
-      <id>releases</id>
-      <name>Internal Releases</name>
-      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases</url>
-    </repository>
-    <snapshotRepository>
-      <id>snapshots</id>
-      <name>Internal Snapshots</name>
-      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
-
-  <scm>
-    <connection>scm:svn:http://chianti.ucsd.edu/svn/corelibs/trunk</connection>
-    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/corelibs/trunk</developerConnection>
-    <url>http://chianti.ucsd.edu/svn/corelibs/trunk</url>
-  </scm>
-
 
 </project>
 
