--- a/cytoscape/trunk/webstart/pom.xml
+++ b/cytoscape/trunk/webstart/pom.xml
@@ -4,13 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>cytoscape</groupId>
+    <artifactId>parent</artifactId>
+    <version>2.8.0-beta2-SNAPSHOT</version>
+  </parent>
+
   <groupId>cytoscape</groupId>
   <artifactId>webstart</artifactId>
-  <version>2.8.0-beta2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Cytoscape Webstart</name>
 
-  <!-- This is the url is used to define the codebase of the jnlp file. -->
+  <!-- This is the url used to define the codebase of the jnlp file. -->
   <url>${webstart.url}</url>
 
   <build>
@@ -29,7 +34,7 @@
         <configuration>
           <excludeTransitive>true</excludeTransitive>
           <resourcesDirectory>${project.basedir}/src/main/resources</resourcesDirectory>
-		  <libPath>lib</libPath>
+          <libPath>lib</libPath>
           <jnlp>
             <inputTemplateResourcePath>${project.basedir}/src/main/jnlp</inputTemplateResourcePath>
             <inputTemplate>template.vm</inputTemplate>
@@ -40,7 +45,7 @@
             If this is your first time using Webstart you must create a keystore:
             keytool -genkey -alias cytoscape -keypass secret
             enter "secret" for the password.
-			The actual keystore file created is assumed to be in:  ${user.home}/.keystore
+            The actual keystore file created is assumed to be in:  ${user.home}/.keystore
           -->
           <sign>
             <keypass>secret</keypass>
@@ -55,14 +60,14 @@
   </build>
 
   <dependencies>
-  	<!-- the application -->
+    <!-- the application -->
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
       <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
-  	<!-- coreplugins -->
+    <!-- coreplugins -->
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>advanced-network-merge</artifactId>
@@ -174,6 +179,12 @@
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>filters</artifactId>
+      <version>${version}</version>
+      <classifier>jar-with-dependencies</classifier>
+    </dependency>
+    <dependency>
+      <groupId>cytoscape.coreplugins</groupId>
+      <artifactId>core-commands</artifactId>
       <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
