--- a/cytoscape/trunk/distribution/pom.xml
+++ b/cytoscape/trunk/distribution/pom.xml
@@ -4,9 +4,14 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>cytoscape</groupId>
+    <artifactId>parent</artifactId>
+    <version>2.8.0-beta2-SNAPSHOT</version>
+  </parent>
+
   <groupId>cytoscape</groupId>
   <artifactId>distribution</artifactId>
-  <version>2.8.0-beta2-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Cytoscape Distribution</name>
 
@@ -37,10 +42,26 @@
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
-        <descriptors>
-          <descriptor>src/main/assembly/src.xml</descriptor>
-        </descriptors>
+          <descriptors>
+            <descriptor>src/main/assembly/src.xml</descriptor>
+          </descriptors>
         </configuration>
+        <executions>
+          <execution>
+            <id>directory-assembly</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>directory-single</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>zip-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>com.google.code.maven-install4j</groupId>
@@ -57,50 +78,8 @@
     </plugins>
   </build>
 
-  <!-- 
-       Don't add additional repositories!  
-       We want everything coming from either Maven Central or our repository. 
-       Remember, it's easy to add third party jars to our repository.
-  -->
-  <repositories>
-      <repository>
-          <id>cytoscape_snapshots</id>
-          <snapshots>
-            <enabled>true</enabled>
-          </snapshots>
-          <releases>
-            <enabled>false</enabled>
-          </releases>
-          <name>Cytoscape Snapshots</name>
-          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
-       </repository>
-       <repository>
-          <id>cytoscape_releases</id>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-          <releases>
-            <enabled>true</enabled>
-          </releases>
-          <name>Cytoscape Releases</name>
-          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
-       </repository>
-       <repository>
-          <id>cytoscape_thirdparty</id>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-          <releases>
-            <enabled>true</enabled>
-          </releases>
-          <name>Cytoscape Third Party</name>
-          <url>http://cytoscape.wodaklab.org/nexus/content/repositories/thirdparty/</url>
-       </repository>
-  </repositories>
-
-
   <dependencies>
-  	<!-- the application -->
+    <!-- the application -->
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
@@ -108,7 +87,7 @@
       <classifier>jar-with-dependencies</classifier>
     </dependency>
 
-  	<!-- documentation -->
+    <!-- documentation -->
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>docs</artifactId>
@@ -124,7 +103,7 @@
       <type>zip</type>
     </dependency>
 
-  	<!-- coreplugins -->
+    <!-- coreplugins -->
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>advanced-network-merge</artifactId>
