--- a/core3/property-api/trunk/pom.xml
+++ b/core3/property-api/trunk/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>3.0.0-alpha3</version>
 	</parent>
 
 	<properties>
@@ -22,6 +22,12 @@
 	<name>${bundle.symbolicName}</name>
 
 	<packaging>bundle</packaging>
+
+	<scm>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/property-api/trunk</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/property-api/trunk</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/property-api/trunk</url>
+	</scm>
 
 	<build>
 		<plugins>
