--- a/core3/property-api/trunk/pom.xml
+++ b/core3/property-api/trunk/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://maven.apache.org/POM/4.0.0"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
 		<groupId>org.cytoscape</groupId>
@@ -15,16 +17,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>property-api</artifactId>
-	<version>3.0.0-alpha1</version>
+	<version>1.0-SNAPSHOT</version>
 
 	<name>${bundle.symbolicName}</name>
 
 	<packaging>bundle</packaging>
 
 	<scm>
-		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/property-api/tags/property-api-3.0.0-alpha1</connection>
-		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/property-api/tags/property-api-3.0.0-alpha1</developerConnection>
-		<url>http://chianti.ucsd.edu/svn/core3/property-api/tags/property-api-3.0.0-alpha1</url>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/property-api/trunk</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/property-api/trunk</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/property-api/trunk</url>
 	</scm>
 
 	<build>
