--- a/core3/model-api/trunk/pom.xml
+++ b/core3/model-api/trunk/pom.xml
@@ -15,16 +15,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cytoscape</groupId>
   <artifactId>model-api</artifactId>
-  <version>3.0.0-alpha1</version>
+  <version>3.0.0-alpha2-SNAPSHOT</version>
 
   <name>${bundle.symbolicName} [${bundle.namespace}]</name>
 
   <packaging>bundle</packaging>
 
   <scm>
-    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/model-api/tags/model-api-3.0.0-alpha1</connection>
-    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/model-api/tags/model-api-3.0.0-alpha1</developerConnection>
-    <url>http://chianti.ucsd.edu/svn/core3/model-api/tags/model-api-3.0.0-alpha1</url>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/model-api/trunk</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/model-api/trunk</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/core3/model-api/trunk</url>
   </scm>
 
   <build>
