--- a/core3/viewmodel-api/trunk/pom.xml
+++ b/core3/viewmodel-api/trunk/pom.xml
@@ -15,16 +15,16 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>viewmodel-api</artifactId>
-	<version>3.0.0-alpha1</version>
+	<version>3.0.0-alpha2-SNAPSHOT</version>
 
 	<name>${bundle.symbolicName} (View Model API Bundle)</name>
 
 	<packaging>bundle</packaging>
 
 	<scm>
-		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/viewmodel-api/tags/viewmodel-api-3.0.0-alpha1</connection>
-		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/viewmodel-api/tags/viewmodel-api-3.0.0-alpha1</developerConnection>
-		<url>http://chianti.ucsd.edu/svn/core3/viewmodel-api/tags/viewmodel-api-3.0.0-alpha1</url>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/viewmodel-api/trunk</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/viewmodel-api/trunk</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/viewmodel-api/trunk</url>
 	</scm>
 
 	<build>
