--- a/core3/presentation-api/trunk/pom.xml
+++ b/core3/presentation-api/trunk/pom.xml
@@ -15,7 +15,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
 	<artifactId>presentation-api</artifactId>
-	<version>3.0.0-alpha1</version>
+	<version>3.0.0-alpha2-SNAPSHOT</version>
 
 	<name>${bundle.symbolicName} [${bundle.namespace}]</name>
 
@@ -101,11 +101,4 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-
-  <scm>
-    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/parent/tags/presentation-api-3.0.0-alpha1</connection>
-    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/parent/tags/presentation-api-3.0.0-alpha1</developerConnection>
-    <url>http://chianti.ucsd.edu/svn/core3/parent/tags/presentation-api-3.0.0-alpha1</url>
-  </scm>
 </project>
